# deepworks

./: .gitignore  .nojekyll  CHANGELOG.md  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE  LICENSE.md  README.html  README.md  RETROSPECTIVE.md  _quarto.yml  custom.scss  objects.json  pyproject.toml  robots.txt  search.json  sitemap.xml  tutorial.qmd
.github/ISSUE_TEMPLATE/: config.yml  peer-review.md
.github/workflows/: ai-critic-issues.yml  ai-critic-pr.yml  ai-docstring-detective.yml  ai-tutorial-generator.yml  build.yml  ci-cd.yml  deploy.yml  docs-preview.yml  docs-publish.yml
docs/: CONTRIBUTING.html  Makefile  README.html  RETROSPECTIVE.html  conf.py  example.ipynb  index.md  make.bat  search.json  tutorial.html
docs/reference/: affirmation.get_affirmation.html  breaks.suggest_break.html  index.html  pomodoro.plan_pomodoro.html  prioritize.prioritize_tasks.html
docs/site_libs/bootstrap/: bootstrap-1ab76580b49a1110ec84de14477eeb4c.min.css
reference/: affirmation.get_affirmation.html  affirmation.get_affirmation.qmd  breaks.suggest_break.html  breaks.suggest_break.qmd  index.html  index.qmd  pomodoro.plan_pomodoro.html  pomodoro.plan_pomodoro.qmd  prioritize.prioritize_tasks.html  prioritize.prioritize_tasks.qmd
src/deepwork/: __init__.py  affirmation.py  breaks.py  pomodoro.py  prioritize.py
src/deepworks/: __init__.py  affirmation.py  breaks.py  pomodoro.py  prioritize.py
tests/: test_affirmation.py  test_breaks.py  test_deepwork.py  test_pomodoro.py  test_prioritize.py
